fix: align text in center on mobile landing page

--- a/style.css
+++ b/style.css
@@ -249,6 +249,7 @@ body {
     padding-top: 48px;
     font-size: 36px;
     clip-path: none;
+    text-align: center;
   }
   #supercell-text h1 {
     padding-right: 0;
